--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -15,31 +15,24 @@
     font-weight: inherit;
   }
   .h1 {
-    @apply w-fit text-[1.8rem] leading-[2.125rem] font-bold tracking-[-0.005em];
+    @apply w-fit h-fit text-[1.8rem] leading-[2.125rem] font-bold tracking-[-0.005em];
   }
   .h2 {
-    @apply w-fit text-[1.5rem] leading-[1.875rem] font-semibold tracking-[0em];
+    @apply w-fit h-fit text-[1.5rem] leading-[1.875rem] font-semibold tracking-[0em];
   }
   .h3 {
-    @apply w-fit text-xl leading-[1.5rem] font-medium tracking-[0em];
+    @apply w-fit h-fit text-xl leading-[1.5rem] font-medium tracking-[0em];
   }
   .p {
-    @apply w-fit text-base leading-[21px] tracking-[0em];
+    @apply w-fit h-fit text-base leading-[21px] tracking-[0em];
   }
   .outlinebody {
-    @apply w-fit text-sm font-bold leading-[18px] tracking-[0.06em] uppercase;
+    @apply w-fit h-fit text-sm font-bold leading-[18px] tracking-[0.06em] uppercase;
   }
   .small {
-    @apply w-fit text-[12px] leading-[12px] font-semibold tracking-[0em];
+    @apply w-fit h-fit text-[12px] leading-[12px] font-semibold tracking-[0em];
   }
   .a {
-    @apply w-fit text-base leading-[21px] font-normal tracking-[0em];
+    @apply w-fit h-fit text-base leading-[21px] font-normal tracking-[0em];
   }
-
-
-
-
-
 }
-
-  
