--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -35,4 +35,7 @@
   .a {
     @apply h-fit text-base leading-[21px] font-normal tracking-[0em];
   }
+  .btn {
+    @apply rounded-lg bg-RedPrimary w-full p-4 outlinebody text-White;
+  }
 }
