--- a/Frontend/src/styles/index.css
+++ b/Frontend/src/styles/index.css
@@ -38,6 +38,9 @@
   .btn {
     @apply rounded-lg bg-RedPrimary w-full p-4 outlinebody text-White;
   }
+  .input {
+    @apply w-full py-2 px-4 rounded-lg p text-Body border border-Body placeholder:text-Small outline-none;
+  }
   .select {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
     background-position: right 0.5rem center;
